--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,1 +1,70 @@
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout 
+   xmlns:android="http://schemas.android.com/apk/res/android" 
+   android:padding="3dp" 
+   android:scrollbars="vertical" 
+   android:layout_width="match_parent" 
+   android:layout_height="match_parent">
+
+   <LinearLayout 
+      android:orientation="vertical" 
+      android:layout_width="match_parent" 
+      android:layout_height="wrap_content" >    
+      
+      <LinearLayout 
+        android:orientation="horizontal" 
+        android:layout_width="match_parent" 
+        android:layout_height="wrap_content" >
+    
+        <ImageView 
+          android:id="@+id/tambah" 
+          android:layout_width="30dp" 
+          android:layout_height="30dp" 
+          android:src="@drawable/tambah" 
+          android:adjustViewBounds="true" 
+          android:contentDescription="@string/kosong" />
+    
+        <EditText 
+          android:id="@+id/pcari" 
+          android:layout_width="190dp" 
+          android:layout_height="33dp" 
+          android:hint="@string/cari" 
+          android:inputType="text" 
+          style="@style/EditText1" />
+    
+        <ImageView 
+          android:id="@+id/cari" 
+          android:layout_width="30dp" 
+          android:layout_height="30dp" 
+          android:src="@drawable/search" 
+          android:contentDescription="@string/kosong" />
+    
+        <ImageView 
+          android:id="@+id/ulTah" 
+          android:layout_width="30dp" 
+          android:layout_height="30dp" 
+          android:src="@drawable/brtd" 
+          android:contentDescription="@string/kosong" />
+
+        <ImageView 
+          android:id="@+id/hadir" 
+          android:layout_width="30dp" 
+          android:layout_height="30dp" 
+          android:src="@drawable/images" 
+          android:contentDescription="@string/kosong" />
+
+      </LinearLayout>  
+      
+    <ListView 
+        android:textSize="12sp" 
+        android:id="@+id/list" 
+        android:background="@drawable/bgreen" 
+        android:focusable="false" 
+        android:clickable="false" 
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content" 
+  		/>
+   
+    </LinearLayout>
+</RelativeLayout>
 
